Refactor: 코드리뷰에 따라 코드 수정